profile-popover: Fix position to hide the pointed-to message border.
In this commit we just adjust the position of user profile popover
opened when we click upon buddy from buddy list to view user profile.
The new position ensures that the little blue border visible from back
due to pointed to message is completely hidden by the popover.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -73,7 +73,7 @@ ul.actions_popover i {
 
 .user_popover {
     top: 100px!important;
-    margin: -15px;
+    margin: -14px;
 }
 
 .popover-avatar .popover-inner {
